--- a/index.html
+++ b/index.html
@@ -21,5 +21,52 @@
         </footer>
           
     <a href=""><p>КОНТАКТИ</p> <p>Адреса: м. Техноград, вул. Дисплейна, 15</p> <p>Тел.: 8895-6341</p> <p>Тгк.: К-ПОП СВІТ</p> </a>
+        </main>
     </body>
 </html>
+    </body>
+</html>
+
+header {
+    background-color: rgb(224, 158, 224);
+    padding: 15px;
+}
+
+header img {
+    width: 200px;
+    height: 90px;
+}
+
+header a {
+    color: black;
+    background-color: rgb(250, 229, 255);
+    text-decoration: none;
+    border: 1px solid white;
+    border-radius: 10px;
+    font-size: 20px;
+    padding: 5px;
+    margin: 10px;
+}
+
+h1 {
+    text-align: center;
+    font-size: 50px;
+}
+
+h2 {
+    background-color: #b98bb9;
+    color: blueviolet;
+    font-size: 30px;
+}
+
+p img {
+    height: 150px;
+    width: 200px;
+}
+
+a {
+    text-align: center;
+    font-size: 20px;
+    color: rgb(80, 9, 80);
+    border: 3px solid rgb(128, 35, 115);
+}
